fixed movie names

--- a/index.html
+++ b/index.html
@@ -84,31 +84,25 @@
               </div>
               <div class="movie-list-item">
                 <img src="img/3.jpg" alt="" class="movie-list-item-image" />
-                <span class="movie-list-item-title">Her</span>
+                <span class="movie-list-item-title">Storm</span>
                 <p class="movie-list-item-desc">
-                  In a near future, a lonely writer develops an unlikely
-                  relationship with an operating system designed to meet his
-                  every need.
+                    Storm is caught in a race against time to save his father from death.
                 </p>
                 <button class="movie-list-item-btn">WATCH</button>
               </div>
               <div class="movie-list-item">
                 <img src="img/4.jpg" alt="" class="movie-list-item-image" />
-                <span class="movie-list-item-title">Her</span>
+                <span class="movie-list-item-title">1917</span>
                 <p class="movie-list-item-desc">
-                  In a near future, a lonely writer develops an unlikely
-                  relationship with an operating system designed to meet his
-                  every need.
+                    Two soldiers are assigned to race against time and deliver a message that will stop 1,600 men from walking straight into a deadly trap.
                 </p>
                 <button class="movie-list-item-btn">WATCH</button>
               </div>
               <div class="movie-list-item">
                 <img src="img/5.jpg" alt="" class="movie-list-item-image" />
-                <span class="movie-list-item-title">Her</span>
+                <span class="movie-list-item-title">Avengers</span>
                 <p class="movie-list-item-desc">
-                  In a near future, a lonely writer develops an unlikely
-                  relationship with an operating system designed to meet his
-                  every need.
+                    Earth's mightiest heroes must come together and learn to fight as a team if they are going to stop the mischievous Loki and his alien army from enslaving humanity.
                 </p>
                 <button class="movie-list-item-btn">WATCH</button>
               </div>
